fixup scrolling on ios

--- a/modules/topics-ui/browser/less/components/topic/topic-reply-editor.less
+++ b/modules/topics-ui/browser/less/components/topic/topic-reply-editor.less
@@ -12,6 +12,7 @@
 
 .panel--reply-editor--active {
   height: 25rem;
+  @media @small { height: 10rem; }
 }
 
 .reply-editor__form {
